--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -85,6 +85,7 @@ __Additional Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/bi
   
 ### Week 13. 
 __Lecture:__ [Gaussian Proces Models](./lectures/24_gaussian_process.html) and [Rethinking Alternatives](./lectures/25_beyond_rethinking.html)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-beyond   
 __Files:__ [predicted GP script](./lectures/data/gp/predict_gpl2.R)  
 __Reading:__ McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf)  
 __Further reading:__ [stan](http://mc-stan.org), [R-INLA examples](http://www.r-inla.org/examples/volume-1), [rstanarm intro](https://cran.r-project.org/web/packages/rstanarm/vignettes/rstanarm.html)  
