--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -88,7 +88,7 @@ __Lecture:__ [Gaussian Proces Models](./lectures/24_gaussian_process.html) and [
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-beyond   
 __Files:__ [predicted GP script](./lectures/data/gp/predict_gpl2.R)  
 __Reading:__ McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf)  
-__Further reading:__ [stan](http://mc-stan.org), [R-INLA examples](http://www.r-inla.org/examples/volume-1), [rstanarm intro](https://cran.r-project.org/web/packages/rstanarm/vignettes/rstanarm.html)  
+__Further reading:__ [R users will now inevitably become Bayesians](https://thinkinator.com/2016/01/12/r-users-will-now-inevitably-become-bayesians/), [rstanarm intro](https://cran.r-project.org/web/packages/rstanarm/vignettes/rstanarm.html), [brms overview](https://cran.r-project.org/web/packages/brms/vignettes/brms_overview.pdf), [stan](http://mc-stan.org), [Introduction to INLA](http://www.r-inla.org/events/bayes2013anintroductiontoinlawithacomparisontojagshandson), [more R-INLA examples](http://www.r-inla.org/examples/volume-1),   
   
 ### Week 14. 
 __Lecture:__ Open Lab  
