--- a/schedule_new.Rmd
+++ b/schedule_new.Rmd
@@ -13,7 +13,7 @@ datestring <- paste(month(current_date), day(current_date), year(current_date), 
 
 ### Week 1.
 `r datestring`   
-__Lecture__: [Why Advanced Data Analysis?](lectures/01_intro.html), [Re-Introduction to Bayesian Logic](./lectures/11_bayes_reintro.html) and [Sampling](./lectures/12_posterior_sampling.html)  
+__Lecture__: [Why Advanced Data Analysis? And a little Bayes...](lectures/01_intro.html),  [Sampling from your Posterior](./lectures/12_posterior_sampling.html)  
 __Reading:__ McElreath Ch. 1-3  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-bayes-2019  
 
