--- a/schedule_new.Rmd
+++ b/schedule_new.Rmd
@@ -13,8 +13,8 @@ datestring <- paste(month(current_date), day(current_date), year(current_date), 
 
 ### Week 1.
 `r datestring`   
-__Lecture__: [Why Advanced Data Analysis?](lectures/01_intro.html),  [Re-Introduction to Bayes](lectures/02_Bayesian_Intro.html), [Sampling from your Posterior](./lectures/12_posterior_sampling.html)  
-__Reading:__ McElreath Ch. 1-3  
+__Lecture__: [Why Advanced Data Analysis?](lectures/01_intro.html),  [Re-Introduction to Bayes](lectures/02_Bayesian_Intro.html), 
+__Reading:__ McElreath Ch. 1-2  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-bayes-2019  
 
 
@@ -24,16 +24,16 @@ current_date <- current_date+ days(7)
 datestring <- paste(month(current_date), day(current_date), year(current_date), sep="/")
 ```
 `r datestring`  
-__Lecture:__ [Linear Bayesian Models](./lectures/13_linear_models.html), [Multiple Predictor Variables (including Categoricals)](./lectures/14_multiple_predictors.html)  
-__Reading:__ McElreath Chapter 4-5  
+__Lecture:__ [Sampling from your Posterior](./lectures/03_posterior_sampling.html), [Linear Bayesian Models](./lectures/13_linear_models.html),   
+__Reading:__ McElreath Chapter 3-4  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-linreg-2019    
 
 ### Week 3.
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
-__Lecture:__ [Bayesian Multimodel Inference](./lectures/15_mmi.html), [Interaction Effects](./lectures/16_interactions.html)  
-__Reading:__ McElreath Chapter 6-7  
+__Lecture:__ [Multiple Predictor Variables (including Categoricals)](./lectures/14_multiple_predictors.html), [Bayesian Multimodel Inference](./lectures/15_mmi.html)   
+__Reading:__ McElreath Chapter 5-6  
 __Additional Reading:__ [Aho et al 2013 Ecology](http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%20et%20al%202014.pdf), [Gelman et al. 2013 on WAIC and LOO](http://link.springer.com/article/10.1007/s11222-013-9416-2)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-mmi-2019    
 
@@ -41,8 +41,8 @@ __Etherpad:__ https://etherpad.wikimedia.org/p/609-mmi-2019
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
-__Lecture:__ [Markov Chain Monte-Carlo Approaches](./lectures/17_mcmc.html)   
-__Reading:__ McElreath Chapter 8,9  
+__Lecture:__ [Interaction Effects](./lectures/16_interactions.html), [Markov Chain Monte-Carlo Approaches](./lectures/17_mcmc.html)   
+__Reading:__ McElreath Chapter 7-8  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-mcmc_entropy-2019    
 
 ### Week 5.
