--- a/lectures/07_random_effects.Rmd
+++ b/lectures/07_random_effects.Rmd
@@ -11,6 +11,8 @@ output:
     transition: fade
     self_contained: false
     lib_dir: libs
+    code_download: true
+
 ---
   
 ## 
@@ -23,19 +25,22 @@ output:
 
 ```{r prep, echo=FALSE, cache=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
+library(pander)
 opts_chunk$set(fig.height=5, fig.width=7, comment=NA, 
                warning=FALSE, message=FALSE, 
                dev="jpeg", echo=FALSE)
 
 library(ggplot2)
 library(car)
+theme_set(theme_bw(base_size=17))
 
 library(dplyr)
 library(tidyr)
 library(broom)
 
 library(lme4)
-library(sjPlot)
+library(merTools)
+library(DHARMa)
 
 ```
 
@@ -66,13 +71,15 @@ library(sjPlot)
 ![](./images/07/states_temp.jpg)
 
 ## Pseudoreplication
-![](./images/07/kinds_of_pseudoreplication.jpg)
+![](./images/07/kinds_of_pseudoreplication.jpg){width=60%}
 
 Hurlbert 1985
 
 ## What is the problem with Pseudoreplication?
 
 $$Y_i = \beta X_i + \epsilon_i$$
+\
+
 $$\epsilon \sim \mathcal{N}(0, \sigma^2)$$
 \
 \
@@ -82,12 +89,15 @@ This assumes that all replicates are independent and identically distributed
 > - Average at group level  
 >       - Big hit to sample size/power  
 \
-> - Model correlation matrix  
->       - Limited number of ways to deal with correlation  
->       - Multiple levels of nesting tricky  
+> - **Fixed effect** of group  
+>       - Big hit to DF  
+>       - Many parameters to estimate = higher coef SE  
 \
-> - Model hierarchy explicitly
->       - Random effects, mixed models
+> - Model hierarchy explicitly with **Random effects**  
+>       - Mixed models if fixed and random effects  
+>       - Models correlation within groups  
+>       - Creates correct error structure  
+>       - Loses fewer DF  
 
 ## 
 \
@@ -143,7 +153,7 @@ mussels_summary <- mussels %>%
 
 mussels_mer <- lmer(mussel_length ~ 1|site, data=mussels)
 
-mussels_summary$ranef <- ranef(mussels_mer)$site + fixef(mussels_mer)[1]
+mussels_summary$ranef <- ranef(mussels_mer)$site[,1] + fixef(mussels_mer)[1]
 
 mussel_scatter <- mussel_scatter +
   stat_summary(color="red", fun.y="mean", size=4, geom="point")
@@ -151,14 +161,14 @@ mussel_scatter <- mussel_scatter +
 mussel_scatter
 ```
 
-## You Might think...
+## You Could Try a Fixed Effects Model...
 \
 \
 $$Y_{ij} = \beta_{j} + \epsilon_i$$
 \
 $$\epsilon \sim \mathcal{N}(0, \sigma^2)$$
 \
-<div class="fragment">And you'd be close...</div>
+<div class="fragment">But this only tells you about **these** islands</div>
 
 ## What is the distribution of site means?
 ```{r site_hist}
@@ -171,11 +181,13 @@ ggplot(data=mussels_summary,
 <div class="fragment">A nice normal distribution</div>
 
 ## Random Effects
-- A *random effect* is a parameter that varies across groups following a normal distribution  
+- A *random effect* is a parameter that varies across groups following a distribution  
 \
-- Implies that, while there is a grand mean *fixed* effect, each group deviates randomly  
+- Implies that, while there is a grand mean *fixed* effect (slope or intercept), each group deviates randomly  
 \
 - Implies that there is no one *true* value of a parameter in the world  
+\
+- Allows us to estimate **variability** in how effects manifest  
 \
 - We pull apart *variance components* driving our response
 
@@ -197,23 +209,6 @@ $$\beta_{j} \sim \mathcal{N}(\beta, \sigma^2_{site})$$
 $$\epsilon \sim \mathcal{N}(0, \sigma^2)$$
 </div>
 
-
-## Wait, but what about good old blocks?
-> - We used to model blocks via estimation of means/parameters within a block  
-\
-> - But - there was no distribution of parameters assumed  
-\
-> - Assumed blocks could take any value  
->       - Is this biologically plausible?  
->       - What are blocks but collections of nuissance parameters?  
-
-## What difference does this make?
-```{r show_ranef}
-mussel_scatter +
-  geom_point(data=mussels_summary, mapping=aes(x=site, y=ranef),
-             color="darkorange", size=4)
-```
-
 ## Consider what random effects mean - 1 model, 2 ways
 
 $$Y_{ij} =  \beta_{j} + \epsilon_i$$
@@ -221,7 +216,7 @@ $$Y_{ij} =  \beta_{j} + \epsilon_i$$
 $$\beta_{j} \sim \mathcal{N}(\alpha, \sigma^2_{site})$$
 \
 $$\epsilon \sim \mathcal{N}(0, \sigma^2)$$
-\
+<hr>
 \
 <div class="fragment">
 $$Y_{ij} =  \alpha + \beta_{j} + \epsilon_i$$
@@ -230,6 +225,73 @@ $$\beta_{j} \sim \mathcal{N}(0, \sigma^2_{site})$$
 \
 $$\epsilon \sim \mathcal{N}(0, \sigma^2)$$
 </div>
+
+## Fixed Versus Random Effects Model Visually
+```{r visual_ranef}
+library(DiagrammeR)
+fixed <- create_graph(
+  nodes_df = create_node_df(
+  n = 3,
+  label = c("site", "length", "error"),
+  shape = c("rectangle", "rectangle", "circle"),
+  x = c(1,2,2),
+  y = c(1,1,2)),
+  
+  edges_df = create_edge_df(
+    from = c(1, 3),
+    to = c(2,2),
+    rel = "leading_to")
+)
+
+random <- create_graph(
+  nodes_df = create_node_df(
+  n = 4,
+  label = c("site", "length", "residual\nerror", "total\nerror"),
+  shape = c("circle", "rectangle", "circle", "circle"),
+  x = c(1,2,2,2),
+  y = c(2,1,3,2),
+  width = 0.6),
+  
+  edges_df = create_edge_df(
+    from = c(1,3,4),
+    to = c(4,4,2),
+    rel = "leading_to")
+)
+```
+
+<div id = "left">
+```{r}
+render_graph(fixed, title = "Fixed")
+
+```
+</div>
+<div id = "right">
+```{r}
+render_graph(random, title = "Random")
+```
+</div>
+
+
+## Wait, but what about good old blocks and fixed effects?
+> - We used to model blocks via estimation of means/parameters within a block  
+\
+> - But - there was no distribution of parameters assumed  
+\
+> - Assumed blocks could take any value  
+>       - Is this biologically plausible?  
+>       - What are blocks but collections of nuissance parameters?  
+
+## The Shrinkage Factor!
+```{r show_ranef}
+mussel_scatter +
+  geom_point(data=mussels_summary, 
+             mapping=aes(x=site, y=ranef),
+             color="darkorange", size=4)
+```
+
+Orange = random effects estimates, Red = fixed effects estimate
+
+
 
 ## Shrinkage
 - Random effects assume each observation is drawn from a grand mean  
@@ -277,36 +339,51 @@ mussel_unbal+
   theme_bw(base_size=17)
 ```
 
-## It's effects more than means
+## It effects more than means - Confidence!
 ```{r showShirnk}
-shrunk <- sjp.lmer(mussels_ragged_mer, type="coef", show.values=FALSE, 
-                   prnt.plot=FALSE)$plot +
-  theme_bw(base_size=17) +
-  ggtitle("Random Effects Model")+ 
- theme(strip.background = element_blank(),
-       strip.text.x = element_blank())+ ylim(c(9,40))
+# shrunk <- plot_model(mussels_ragged_mer, type="est") +
+#   theme_bw(base_size=17) +
+#   ggtitle("Random Effects Model")+ 
+#  theme(strip.background = element_blank(),
+#        strip.text.x = element_blank())+ ylim(c(9,40))
+# 
+ mussels_ragged_lm <- lm(mussel_length ~ site-1, data=mussels_ragged)
+# 
+# 
+# not_shrunk <- plot_model(mussels_ragged_lm, show.values=FALSE, 
+#                      prnt.plot=FALSE, show.p=FALSE, sort.est=FALSE) +
+#   theme_bw(base_size=17) +
+#   ggtitle("Fixed Effects Model") + ylim(c(9,40)) +
+#   ylab("")
+# 
+# library(gridExtra)
+# grid.arrange(not_shrunk, shrunk, ncol=2)
 
-mussels_ragged_lm <- lm(mussel_length ~ site-1, data=mussels_ragged)
+effs <- rbind(predictInterval(mussels_ragged_mer, 
+                newdata = data.frame(site = unique(mussels_ragged$site)), 
+                level = 0.95, include.resid.var = FALSE) %>%
+  mutate(upr = upr, lwr = lwr, 
+         type = "Random Effect Model",
+         site = levels(mussels_ragged$site)),
 
+predict(mussels_ragged_lm, interval = "confidence",
+        newdata = data.frame(site = unique(mussels_ragged$site))) %>%
+  as_tibble() %>%
+  mutate(type = "Fixed Effect Model", 
+         site = levels(mussels_ragged$site)))
 
-not_shrunk <- sjp.lm(mussels_ragged_lm, show.values=FALSE, 
-                     prnt.plot=FALSE, show.p=FALSE, sort.est=FALSE)$plot +
-  theme_bw(base_size=17) +
-  ggtitle("Fixed Effects Model") + ylim(c(9,40)) +
-  ylab("")
-
-library(gridExtra)
-grid.arrange(not_shrunk, shrunk, ncol=2)
-
+ggplot(effs, 
+       aes(x=site, y = fit, ymin = lwr, ymax = upr)) +
+  geom_pointrange() +
+  facet_wrap(~type) +
+  coord_flip()
 
 ```
 
 ## Fixed versus Random Effects
 <div style="text-align:left">
-<div class="fragment">**Fixed Effect:** Effects that are constant across
-populations.  
-**Random Effect:** Effects that vary are
-random outcomes of underlying processes.\
+<div class="fragment">**Fixed Effect:** Effects that are constant across populations.  
+**Random Effect:** Effects that vary are random outcomes of underlying processes.\
 </div>
 \
 <div class="fragment">Gelman and Hill (2007) see the distinction as artificial. Fixed effects
@@ -321,13 +398,58 @@ different, and artificial.
 </div>
 </div>
 
-## Is my effect fixed or random?
+## BUT - The big assumption
+<br><br>
+<h2><center>The Random Effect is Uncorrelated with Any Fixed Effects</center></h2>
+
+## A Visual Explanation: Fixed Effects
+```{r visual_fixef_assume}
+
+
+fixed %>%
+  add_node_df(create_node_df(n=1,label = "predictor", 
+           shape = "rectangle",
+           x = 1, y = 0, width = 0.6)) %>% 
+  set_edge_attrs("dir", "forward") %>%
+  set_edge_attrs("dir", "forward") %>%
+  add_edge_df(create_edge_df(from = c(4,4), to = c(1,2),
+                             dir = c("both", "forward"))) %>%
+render_graph()
+```
+
+## A Visual Explanation: Random Effects
+```{r visual_random_assume}
+
+
+random %>%
+  add_node_df(create_node_df(n=1,label = "predictor", 
+           shape = "rectangle",
+           x = 1, y = 1, width = 0.6)) %>% 
+  set_edge_attrs("dir", "forward") %>%
+  set_edge_attrs("dir", "forward") %>%
+  add_edge_df(create_edge_df(from = 5, to = 2,
+                             dir = "forward")) %>%
+render_graph()
+```
+<div class = "fragment">Note the lack of correlation</div>
+
+## Fixed versus Random Effects Revisited
+> - If your groups are correlated with predictors, use fixed effects  
+>     - See also upcoming lecture  
+\
+> - If your groups are not "exchangeable", use fixed effects  
+\
+> - Fixed effects aren't **bad**, they're just inefficient  
+\
+> - However, fixed effects are harder to generalize from
+
+## More on when to avoid random effects: estimation concerns
 > 1. Do you have <4 blocks? **Fixed**  
 \
 > 2. Do you have <3 points per block? **Fixed**\
 \
 > 3. Is your 'blocking' variable continuous? **Fixed**\
->     - But slope can vary by discrete blocks - wait for it!
+>     - But slope can vary by discrete blocks - wait for it!  
 \
 > 4. Do you have lots of blocks, but few/variable points per block? **Random**\
 >     - Save DF as you only estimate $\sigma^2$
@@ -336,10 +458,13 @@ different, and artificial.
 ## Other Ways to Avoid Random Effects
 > - Are you not interested in within subjects variability?\
 >       - AVERAGE at the block level  
+>       - But, loss of power  
 \
 > - Is block level correlation simple?\
 >       - GLS with compound symmetry varying by block\
->       - `corCompSym(form = ~ 1|block)`
+>       - `corCompSym(form = ~ 1|block)`  
+\
+> - OH, JUST EMBRACE THE RANDOM!
 
 ## 
 \
@@ -348,21 +473,40 @@ different, and artificial.
 <h1>Estimating Random Effects</h1>
 
 ## Restricted Maximum Likelihood
-- We typically estimate a $sigma^2$ of random effects, not the effect of each block  
-      - But later can derive Best Least Unbiased Predictors of each block (BLUPs)  
+- We typically estimate a $\sigma^2$ of random effects, not the effect of each block  
+      - But later can derive Best Least Unbiased Predictors of each block (**BLUPs**)  
 \      
 - ML estimation can underestimate random effects variation ($\sigma^2_{block}$)
 \
 - REML seeks to decompose out fixed effects to estimate random effects \
 \
-- Works iteratively - estimates random effects, then fixed, and converges \
+- Works iteratively - estimates random effects, then fixed, then back, and converges \
         - Lots of algorithms, computationally expensive
         
+## What other methods are available to fit GLMMs?
+
+<font size = "-1">(adapted from Bolker et al TREE 2009 and https://bbolker.github.io/mixedmodels-misc/glmmFAQ.html)</font>
+
+```{r glmmtab,echo=FALSE,results="asis"}
+methtab <- read.table(sep="|",header=TRUE,text="
+Method | Advantages | Disadvantages | Packages
+Penalized quasi-likelihood | Flexible, widely implemented | Likelihood inference may be inappropriate; biased for large variance or small means |  glmmPQL (R:MASS), ASREML-R
+Laplace approximation | More accurate than PQL | Slower and less flexible than PQL | glmer (R:lme4), glmm.admb (R:glmmADMB), INLA, glmmTMB
+Gauss-Hermite quadrature | More accurate than Laplace | Slower than Laplace; limited to 2‑3 random effects | glmer (R:lme4, lme4a), glmmML (R:glmmML)"
+)
+set.alignment(default="left")
+pander(methtab,split.table=Inf)
+```
+
 ## In R....
 \
-\
-![](./images/07/lmer_lemur_tim_doherty.jpg)
-<div style="text-align:left">Thank you Tim Doherty</div>
+![](./images/07/lmer_lemur_tim_doherty.jpg){width=55%}
+<div style="text-align:left"><font size = "-1">Thank you Tim Doherty</font></div>
+
+## THE ONE SOURCE
+<br><br><br>
+<center>https://bbolker.github.io/mixedmodels-misc/</center>
+
 
 ## NLME and LMER
 - `nlme` was created by Pinhero and Bates for linear and nonlinear mixed models  
@@ -377,6 +521,21 @@ different, and artificial.
         - Simpler syntax adapted by many other packages  
         - Does not allow you to model correlation structure  
         - Does not allow you to model variance structure  
+
+## Other R packages (functions) fit GLMMs?
+
+- MASS::glmmPQL (penalized quasi-likelihood)
+- lme4::glmer (Laplace approximation and adaptive Gauss-Hermite quadrature [AGHQ])
+- glmmML (AGHQ)
+- glmmAK (AGHQ?)
+- glmmADMB (Laplace)
+- **glmmTMB** (Laplace)
+- glmm (from Jim Lindsey's `repeated` package: AGHQ)
+- gamlss.mx
+- ASREML-R
+- sabreR
+\
+<font size = "-1">(from https://bbolker.github.io/mixedmodels-misc/glmmFAQ.html)</font>
         
 ## Don't you... Forget about Bayes
 - `rstanarm` uses `lme4` syntax  
@@ -430,8 +589,17 @@ plot(ranef(mussels_mer))
 lattice::qqmath(ranef(mussels_mer, condVar=TRUE))
 ```
 
+
+## Evaluating...quantile residuals
+```{r lmer_quantiles, echo=TRUE, warning=FALSE, error=FALSE}
+library(DHARMa)
+r <- simulateResiduals(mussels_mer)
+plot(r, asFactor=TRUE)
+```
+
+
 ## Evaluating Coefficients
-```{r broom_mod, echo=TRUE}
+```{r broom_mod, echo=TRUE, warning=FALSE}
 knitr::kable(broom::tidy(mussels_mer))
 ```
 
@@ -448,21 +616,10 @@ knitr::kable(broom::tidy(mussels_mer))
 - Requires knowing distribution of variability around random effects  
 \
 - This is only 'natural' in Bayes
-
-
-## Enter lmerTest
-- Uses Satterthwaite corrected DF
-
-```{r mer_test}
-library(lmerTest)
-mussels_mer <- lmer(mussel_length ~ (1|site), data=mussels)
-
-summary(mussels_mer)$coefficients
-```
-
-## The Random effects
-```{r broom_mod}
-```
+\
+- Why not compare to a null model anyway?  
+\
+- More an issue with mixed models - stay tuned!
 
 ## Seeing the Fixed Effects
 ```{r fixef_effects, echo=TRUE}
@@ -481,17 +638,61 @@ coef(mussels_mer)
 
 
 ## Visualizing 
-```{r sjp, echo=TRUE}
-library(sjPlot)
-sjp.lmer(mussels_mer, type="coef",
-         show.values=FALSE)
+```{r sjp, echo=TRUE, eval = FALSE}
+library(merTools)
+
+#make data for coefficients
+test_data <- data.frame(site = unique(mussels$site))
+
+#get simulated predictions
+coef_df <- predictInterval(mussels_mer, newdata = test_data,
+                           level = 0.95, include.resid.var = FALSE) %>%
+  cbind(test_data)
+
+#plot
+ggplot(coef_df, aes(x = site, y = fit, ymin = lwr, ymax = upr)) +
+  geom_pointrange() + coord_flip()+
+  geom_hline(yintercept = 0, color = "red", lty = 2)
+```
+
+## Visualizing 
+```{r sjp, echo=FALSE}
+```
+
+## Visualizing Random Effects
+```{r sjp_re, echo=TRUE, eval = FALSE}
+ranef_df <- predictInterval(mussels_mer, which = "random", 
+                            newdata = test_data,
+                           level = 0.95, include.resid.var = FALSE) %>%
+  cbind(test_data)
+
+#plot
+ggplot(ranef_df, aes(x = site, y = fit, ymin = lwr, ymax = upr)) +
+  geom_pointrange() + coord_flip() +
+  geom_hline(yintercept = 0, color = "red", lty = 2)
+```
+
+## Visualizing Random Effects
+```{r sjp_re}
 ```
 
 
-## Visualizing Random Effects
-```{r sjp_re, echo=TRUE}
-sjp.lmer(mussels_mer, type="re",
-         show.values=FALSE)
+
+## Visualizing Fixed Effects
+```{r sjp_fe, echo=TRUE, eval = FALSE}
+fixed_df <- predictInterval(mussels_mer, which = "fixed", 
+                            newdata = test_data,
+                           level = 0.95, include.resid.var = FALSE) %>%
+  cbind(test_data)
+
+#plot
+ggplot(fixed_df, aes(x = site, y = fit, ymin = lwr, ymax = upr)) +
+  geom_pointrange() + coord_flip() +
+  geom_hline(yintercept = 0, color = "red", lty = 2)
+```
+
+## Visualizing Fixed Effects
+```{r sjp_fe}
 ```
 
 ## Example
@@ -503,4 +704,6 @@ sjp.lmer(mussels_mer, type="re",
 \
 - Analyze using `lmer`  
 \
-- Compare outputs, visualize coefficients
+- Compare outputs, visualize coefficients  
+\
+- Bonus, try `glmmTMB` and search out needed functions
