--- a/schedule_new.Rmd
+++ b/schedule_new.Rmd
@@ -64,8 +64,8 @@ __Etherpad:__ https://etherpad.wikimedia.org/p/609-glm-2019
 ```
 `r datestring`   
 __Lecture:__ [Overdispersed Models](./lectures/12_overdisp.html), [Zero Inflated Models](./lectures/20_zinfl.html)   
-__Reading:__ McElreath Chapter 11, [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Roset et al 2006 on Overdispersion](http://byrneslab.net/classes/biol609/Rose_et_al_2006_zero_inflation.pdf)  
-__Additional Reading:__ [Zuur chapter on zero inflation](http://byrneslab.net/classes/biol609/zuur_zero_inflation.pdf)  
+__Reading:__ McElreath Chapter 11, [Introduction to glmmTMB](https://www.biorxiv.org/content/10.1101/132753v1.abstract), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Roset et al 2006 on Overdispersion](http://byrneslab.net/classes/biol609/Rose_et_al_2006_zero_inflation.pdf)  
+__Additional Reading:__ [Zuur chapter on zero inflation](http://byrneslab.net/classes/biol609/zuur_zero_inflation.pdf), [Getting started with glmmTMB](https://cran.r-project.org/web/packages/glmmTMB/vignettes/glmmTMB.pdf), [Troubleshooting with glmmTMB]   
 __Files:__ [Fishing Duration CSV](./lectures/data/20/fishing_duration.csv)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-zig_zag-2019    
 
@@ -78,12 +78,12 @@ __Etherpad:__ https://etherpad.wikimedia.org/p/609-zig_zag-2019
 `r datestring`   
 __Lecture:__ [Random Effects](./lectures/07_random_effects.html), [Mixed Models](./lectures/08_mixed_effects.html)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-ranef-2019  
-__Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) and/or [Zuur on Random Effects](http://byrneslab.net/classes/biol609/Zuur_ch_5.pdf)  
-__Writings on visualization:__ <a href="http://strengejacke.wordpress.com/2014/10/26/visualizing-generalized-linear-mixed-effects-models-with-ggplot-rstats-lme4/">Visualizing Mixed Models part 1</a>, <a href="http://strengejacke.wordpress.com/2014/11/18/visualizing-generalized-linear-mixed-effects-models-part-2-rstats-lme4/">Visualizing Mixed Models part 2</a>, <a href="http://cran.r-project.org/web/packages/sjPlot/index.html">sjPlot</a>, <a href="http://anythingbutrbitrary.blogspot.com/2012/06/random-regression-coefficients-using.html">Random regression coefficients using lme4</a>, <a href="http://stackoverflow.com/questions/13847936/in-r-plotting-random-effects-from-lmer-lme4-package-using-qqmath-or-dotplot">Making mixed model plots look fancy</a>  
+__Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) and/or [Zuur on Random Effects](http://byrneslab.net/classes/biol609/Zuur_ch_5.pdf), [A Practical Guide to Generalized Linear Mixed Models](https://www.cell.com/trends/ecology-evolution/fulltext/S0169-5347(09)00019-6)    
+__Writings on visualization:__ <a href="http://anythingbutrbitrary.blogspot.com/2012/06/random-regression-coefficients-using.html">Random regression coefficients using lme4</a>, <a href="http://stackoverflow.com/questions/13847936/in-r-plotting-random-effects-from-lmer-lme4-package-using-qqmath-or-dotplot">Making mixed model plots look fancy</a>  
 __A Little More Reading:__ <a href="http://jonlefcheck.net/2013/03/13/r2-for-linear-mixed-effects-models/">R<sup>2</sup> for mixed models (from Jon Lefcheck)</a>  
-  __Your One Stop FAQ:__ [Ben Bolker's Mixed Model's FAQ](https://rawgit.com/bbolker/mixedmodels-misc/master/glmmFAQ.html)  
+  __Your One Stop FAQ:__ [Ben Bolker's Mixed Model's FAQ](https://bbolker.github.io/mixedmodels-misc/)  
 __Files:__ [Mussels](./lectures/data/07/mussels.csv), [Uneven  Mussels](./lectures/data/07/mussels_ragged.csv), [RIKZ Beach data](./lectures/data/08/rikz.csv), [growth data](./lectures/data/07nestedGrowth.csv)    
-__R Packages:__ lme4, lmerTest, [merTools](https://github.com/jknowles/merTools), sjplot, RLRsim, cAIC4  
+__R Packages:__ lme4, lmerTest, [merTools](https://github.com/jknowles/merTools), RLRsim, cAIC4  
   
 ### Week 8.
 ```{r next_date, echo=FALSE}
