--- a/schedule_new.Rmd
+++ b/schedule_new.Rmd
@@ -89,12 +89,22 @@ __R Packages:__ lme4, lmerTest, [merTools](https://github.com/jknowles/merTools)
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
-__Lecture:__ [Varying Intercept Mixed Models](./lectures/22_varying_intercept.html) in a Bayesian Context, [Varying Slope Models](./lectures/23a_varslope.html), [Prediction with Mixed Models](./lectures/23b_prediction.html)  
+__Lecture:__ [Varying Intercept Mixed Models](./lectures/22_varying_intercept.html) in a Bayesian Context, [Varying Slope Models](./lectures/23a_varslope.html)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-mixed_bayesian-2019   
 __Reading:__ McElreath Chapter 12, 13   
 __Additional Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) (see the bit on one model written 5 ways), [Gelman and Hill Ch. 13](http://byrneslab.net/classes/biol609/gelman_hill_ch_13.pdf), [Gelman on multiple comparisons in mixed models](http://byrneslab.net/classes/biol609/Gelman_multcomp.pdf)  
 
 ### Week 9.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ Fully Hierarchical Models, [Prediction with Mixed Models](./lectures/23b_prediction.html), Group-Mean Centering and Other Model Structures  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-mixed_bayesian-2019   
+__Reading:__ [McNeish and Kelly 2018](./Readings/McNeish_Kelley_PsychMethods_2019.pdf), [Causal Model Structures and Random Effects](http://rpubs.com/jebyrnes/causal_mods), [Poe Lecture Slides](./Readings/2018-11-02_wim_poe_clustered_slides.pdf), [Bell et al. 2018a](./Readings/Bell2018_Article_UnderstandingAndMisunderstandi.pdf)  
+__Additional Reading:__ [Bell et al 2018b](./Bell 2018 Qual Quant.pdf)
+
+
+### Week 10.
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
@@ -105,7 +115,7 @@ __Additional Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/bi
   __R Packages:__ nlme   
 
   
-### Week 10. 
+### Week 11. 
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
@@ -115,23 +125,16 @@ __Files:__ [predicted GP script](./lectures/data/gp/predict_gpl2.R)
 __Reading:__ McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf)  
 __Further reading:__ [R users will now inevitably become Bayesians](https://thinkinator.com/2016/01/12/r-users-will-now-inevitably-become-bayesians/), [rstanarm intro](https://cran.r-project.org/web/packages/rstanarm/vignettes/rstanarm.html), [brms overview](https://cran.r-project.org/web/packages/brms/vignettes/brms_overview.pdf), [stan](http://mc-stan.org), [Introduction to INLA](http://www.r-inla.org/events/bayes2013anintroductiontoinlawithacomparisontojagshandson), [more R-INLA examples](http://www.r-inla.org/examples/volume-1)  
   
-### Week 11.  
+### Week 12.  
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
-__Lecture:__ Measurement Error and Missing Data, [Model II and Quantile Regression](./lectures/03_rma_quantile.html)
+__Lecture:__ Measurement Error and Missing Data, [Model II and Quantile Regression](./lectures/03_rma_quantile.html)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-alt_regression-2019  
 __Reading:__ [Warton et al. SMATR](http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf), [Warton et al. 2006 Model II Review](http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf), [Cade and Noon 2003 on Quantile Regression](http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf), [Brennen et al. 2015 quantile regression example](http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf), [Colonescu Ch. 8 on Heteroskedasticity](https://bookdown.org/ccolonescu/RPoE4/heteroskedasticity.html)\
 __Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv), [Clam data](./lectures/data/04/Clams.txt)  
 __R Packages:__ Quantreg  
   
-### Week 12.  
-```{r next_date, echo=FALSE}
-```
-`r datestring`   
-__Lecture:__ Meta-Analysis  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-metaanalysis-2019  
-
 ### Week 13.
 ```{r next_date, echo=FALSE}
 ```
